--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="assets/common.css" />
 
     <link
     href="https://fonts.googleapis.com/css2?family= poppins :wght@200&family=Stinger+Display:wght@500&display=swap"
-    rel="stylesheet"
+    rel="fonts"
   />
   <title>Everything Design</title>
-</head>
+  </head>
 
 <body>
   <img 
