Trying to alter reset.css server

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
-    <link rel="stylesheet" href="assets/common.css" />
+    <link href="https://kinjalgawaskar.github.io/binding/assets/styles/reset.css"/>
+    <link rel="stylesheet" href="assets/common.css"/>
 
     <link
-    href="https://fonts.googleapis.com/css2?family= poppins :wght@200&family=Stinger+Display:wght@500&display=swap"
-    rel="fonts"
-  />
+    href="https://fonts.googleapis.com/css2?family= poppins :wght@200 rel="fonts"/>
+
   <title>Everything Design</title>
   </head>
 
