--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     href="https://fonts.googleapis.com/css2?family= poppins :wght@200 rel="fonts"/>
 
   <title>Everything Design</title>
+
+  <link rel="favicon" type="image/jpg" href="favicon.jpg"/>
+
   </head>
 
 <body>
@@ -25,3 +28,66 @@
   class="face3" src="face3.png" alt="blue">
 
 </body>
+
+<style>
+  body {
+    margin: 0;
+    font-size: 10px;
+    font-family: Helvetica;
+  }
+  
+  .header {
+    background-color: #f1f1f1;
+    padding: 50px;
+    text-align: center;
+  }
+  
+  #navbar {
+    overflow: hidden;
+    background-color: rgb(0, 0, 0);
+  }
+  
+  #navbar a {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 21px;
+  }
+  
+  #navbar a:hover {
+    background-color: rgb(0, 0, 0);
+    color: rgb(0, 0, 0);
+  }
+  
+  #navbar a.active {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    background-color: #000000;
+    color: white;
+  }
+  
+  .content {
+    padding: 16px;
+  }
+  
+  .sticky {
+    position: fixed;
+    top: 0;
+    width: 100%;
+  }
+  
+  .sticky + .content {
+    padding-top: 50px;
+  }
+  </style>
+  </head>
+  <body>
+  
+
+  <div id="navbar">
+    <a class="active" href="javascript:void(0)">Home</a>
+   
+  </div>
+  
+  
