--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
   }
   </style>
   </head>
+  
   <body>
   
 
@@ -89,5 +90,35 @@
     <a class="active" href="javascript:void(0)">Home</a>
    
   </div>
+
+  <nav role='navigation'>
+    <div id="menuToggle">
+  
+      <input type="checkbox" />
+  
+  
+      <span></span>
+      <span></span>
+      <span></span>
+  
+  
+      <ul id="menu">
+        <a href="#">
+          <li>Method Designing</li>
+        </a>
+        <a href="#">
+          <li>On Design Thinking</li>
+        </a>
+        <a href="#">
+          <li>Hooked On a Feeling</li>
+        </a>
+        <a href="#">
+          <li>About the Project</li>
+        </a>
+  
+      </ul>
+    </div>
+  </nav>
+  
   
   
