Updated About Me section on home page

--- a/index.html
+++ b/index.html
@@ -205,14 +205,12 @@ family=Source+Code+Pro:wght@300&display=swap" rel="stylesheet">
           </div>
           
           <div id="slides__2" class="slide">
-            <span class="slide__text"><h2 style="color:rgb(0, 0, 0)">P&nbsp; R&nbsp; E&nbsp; F&nbsp; A&nbsp; C&nbsp; E</h2>
+            <span class="slide__text"><h2 style="color:rgb(0, 0, 0)">A&nbsp; B&nbsp; O&nbsp; U&nbsp; T&nbsp; M&nbsp; E</h2>
 
-              <p style="color:rgb(0, 0, 0)">Lorem ipsum dolor sit amet,
-                consectetur adipiscing elit. Maecenas sit amet pretium urna.
-                Vivamus venenatis velit necneque ultricies, eget elementum
-                magna tristique. Quisque vehicula,risus eget aliquam placerat,
-                purus leo tincidunt eros, eget luctus quam orci in velit.
-                Praesent scelerisque tortor sed accumsan convallis.</p></span>
+              <p style="color:rgb(0, 0, 0)">Kinjal Gawaskar is a digital designer from Bahrain
+                based in NYC presently pursuing a Masters degree in communication design at the
+                Parsons School of Design. With a background in fashion & psychology, Kinjal has a
+              natural affinity for to devise and create eclectic experiences.</p></span>
             <a class="slide__prev" href="#slides__1" title="Prev"></a>
             
           </div>
