--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?
-family=Italiana&family=Playfair+Display:wght@600&
-family=Source+Code+Pro:wght@300&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Italiana&family
+=Playfair+Display:wght@600&family=Source+Code+Pro:wght@300&family=
+Yeseva+One&display=swap" rel="stylesheet">
 
   <title>Journeying Through Design</title>
 
@@ -210,7 +210,7 @@ family=Source+Code+Pro:wght@300&display=swap" rel="stylesheet">
           <div id="slides__2" class="slide">
             <span class="slide__text"><h2 style="color:rgb(0, 0, 0)">A&nbsp; B&nbsp; O&nbsp; U&nbsp; T&nbsp;&nbsp;&nbsp;&nbsp;M&nbsp; E</h2>
 
-              <p style="color:rgb(0, 0, 0)">Kinjal Gawaskar is a digital designer from Bahrain
+              <p style="color:rgb(52, 49, 49)">Kinjal Gawaskar is a digital designer from Bahrain
                 based in NYC presently pursuing a Masters degree in communication design at the
                 Parsons School of Design. With a background in fashion & psychology, Kinjal has a
               natural affinity to devise and create eclectic experiences.</p></span>
