Changed opacity of slider & altered media query

--- a/index.html
+++ b/index.html
@@ -190,19 +190,23 @@ Yeseva+One&display=swap" rel="stylesheet">
     <div class="slider-container">
       <div class="slider">
         <div class="slides">
+          
           <div id="slides__1" class="slide">
-            <span class="slide__text"><h2 style="color:rgb(0, 0, 0)">P&nbsp; R&nbsp; E&nbsp; F&nbsp; A&nbsp; C&nbsp; E</h2>
+            <span class="slide__text"><h2 style="color:rgb(0, 0, 0)
+              ">P&nbsp; R&nbsp; E&nbsp; F&nbsp; A&nbsp; C&nbsp; E</h2>
 
-              <p style="color:rgb(0, 0, 0)">This website is an amalgamation of myriad articles
+              <p style="color:rgb(0, 0, 0)";>This website is an amalgamation of myriad articles
               that shed light on Design as a subject; its genesis, evolution, form, function & use
               over the years & in present times. Read on to explore more and unravel how and why
-              design is important for the new era.</p></span>
+              design is important for the new era. </p></span> 
             <a class="slide__prev" href="#slides__4" title="Next"></a>
             <a class="slide__next" href="#slides__2" title="Next"></a>
           </div>
           
           <div id="slides__2" class="slide">
-            <span class="slide__text"><h2 style="color:rgb(0, 0, 0)">A&nbsp; B&nbsp; O&nbsp; U&nbsp; T&nbsp;&nbsp;&nbsp;&nbsp;M&nbsp; E</h2>
+            <span class="slide__text"><h2 style="color:rgb(0, 0, 0)">
+              A&nbsp; B&nbsp; O&nbsp; U&nbsp; T&nbsp;&nbsp;&nbsp;&nbsp;T&nbsp;
+              H&nbsp;E&nbsp;&nbsp;&nbsp;&nbsp;D&nbsp;E&nbsp;S&nbsp;I&nbsp;G&nbsp;N&nbsp;E&nbsp;R</h2>
 
               <p style="color:rgb(52, 49, 49)">Kinjal Gawaskar is a digital designer from Bahrain
                 based in NYC presently pursuing a Masters degree in communication design at the
