--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@ Yeseva+One&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
-      font-size: 10px; font-family: 'Source Code Pro'; font-weight: 600;
+      font-size: 10px; font-family: 'Source Code Pro'; height: 100vh;
+      font-weight: 600;
       monospace; font-size: 12px; line-height: 1.6;
     }
   
