Learnt a new way to write PREFACE & ABOUT spaced letters

--- a/index.html
+++ b/index.html
@@ -205,8 +205,8 @@ Yeseva+One&display=swap" rel="stylesheet">
         <div class="slides">
           
           <div id="slides__1" class="slide">
-            <span class="slide__text"><h2 style="color:rgb(0, 0, 0)
-              ">P&nbsp; R&nbsp; E&nbsp; F&nbsp; A&nbsp; C&nbsp; E</h2>
+            <span class="slide__text">
+              <h2 style="color:rgb(0, 0, 0); letter-spacing: 25px;">PREFACE</h2>
 
               <p style="color:rgb(0, 0, 0)";>This website is an amalgamation of myriad articles
               that shed light on Design as a subject; its genesis, evolution, form, function & use
@@ -217,9 +217,8 @@ Yeseva+One&display=swap" rel="stylesheet">
           </div>
           
           <div id="slides__2" class="slide">
-            <span class="slide__text"><h2 style="color:rgb(0, 0, 0)">
-              A&nbsp; B&nbsp; O&nbsp; U&nbsp; T&nbsp;&nbsp;&nbsp;&nbsp;T&nbsp;
-              H&nbsp;E&nbsp;&nbsp;&nbsp;&nbsp;D&nbsp;E&nbsp;S&nbsp;I&nbsp;G&nbsp;N&nbsp;E&nbsp;R</h2>
+            <span class="slide__text">
+              <h2 style="color:rgb(0, 0, 0); letter-spacing: 25px;">ABOUT THE DESIGNER</h2>
 
               <p style="color:rgb(52, 49, 49)">Kinjal Gawaskar is a digital designer from Bahrain
                 based in NYC presently pursuing a Masters degree in communication design at the
