Added HTML pages 3 and 4

--- a/page3.html
+++ b/page3.html
@@ -13,7 +13,7 @@
     =Playfair+Display:wght@600&family=Source+Code+Pro:wght@300&family=
     Yeseva+One&display=swap" rel="stylesheet">
 
-    <title>Method Designing</title>
+    <title>On Design Thinking</title>
    
 </head>
 
@@ -113,10 +113,10 @@ href="faviconeye.png">
           -webkit-text-fill-color: white; /* Will override color (regardless of order) */
           -webkit-text-stroke-width: 2px;
           -webkit-text-stroke-color: black;
-          text-align: center;">Method Designing</h1> 
+          text-align: center;">On Design Thinking</h1> 
         
         <h2 style="font-size:2vw; font-family: 'Source Code Pro', monospace; margin-top: -8%;
-          text-align: center;">Jessica Helfand&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;May 2005</h2> 
+          text-align: center;">Maggie Gram&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Fall 2019</h2> 
 
       <style>
         * {
