--- a/page4.html
+++ b/page4.html
@@ -67,10 +67,9 @@ href="faviconeye.png">
             <span></span>
             <span></span>
         
-        
             <ul id="menu">
               <a href="#">
-                <li>Method Designing</li>
+                <li>Hooked on a Feeling</li>
                 <br> <br>
               </a>
               <a href="#">
