Added HTML page 5 & edited title

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ Yeseva+One&display=swap" rel="stylesheet">
     <body>
 
     <div id="navbar">
-      <a class="active"> <div id="logo"> 
+      <a class="active"> <div id="logo">
         <img src="favicon.jpg" width="100px" height="90px" 
         position="sticky"> 
       </div></a>
@@ -82,7 +82,7 @@ Yeseva+One&display=swap" rel="stylesheet">
             <li>Hooked On a Feeling</li>
             <br> <br>
           </a>
-          <a href="#">
+          <a href="page5.html">
             <li>About the Project</li>
           </a>
     
