--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ Yeseva+One&display=swap" rel="stylesheet">
     <body>
 
     <div id="navbar">
-      <a class="active"> <div id="logo">
+      <a class="active" href="index.html"> <div id="logo">
         <img src="favicon.jpg" width="100px" height="90px" 
         position="sticky"> 
       </div></a>
