--- a/page5.html
+++ b/page5.html
@@ -51,7 +51,7 @@ href="faviconeye.png">
         <body>
     
         <div id="navbar">
-          <a class="active"> <div id="logo"> 
+          <a class="active" href="index.html"> <div id="logo"> 
             <img src="favicon.jpg" width="100px" height="90px"
             position="sticky"> 
           </div></a>
