Added media queries to first paragraph

--- a/page2.html
+++ b/page2.html
@@ -185,7 +185,8 @@ href="faviconeye.png">
 
             <div class="row">
               <div class="column" style="background-color:rgb(255, 255, 255);">
-                <p style="color:rgb(0, 0, 0); letter-spacing: -1px;">The author Jessica Helfand, starts the passage by expressing to her readers 
+                <p class="text" style="color:rgb(0, 0, 0); letter-spacing: -1px; margin: 11px;margin-top: 40px;margin-left: 30px;"
+                >The author Jessica Helfand, starts the passage by expressing to her readers 
                   about how a newly engaged form of any critical practice is necessary if it does
                    not include exploring one’s originality. She speaks about how autonomy in graphic 
                    design is vital to sustain a designer’s true identity.
