--- a/page2.html
+++ b/page2.html
@@ -9,8 +9,8 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Familjen+Grotesk:wght@500&display=swap"
-    =Playfair+Display:wght@600&family=Source+Code+Pro:wght@300&display=swap" 
+    <link href="https://fonts.googleapis.com/css2?family=Familjen+Grotesk:wght@400&display=swap"
+    =Playfair+Display:wght@300&family=Source+Code+Pro:wght@100&display=swap" 
     Yeseva+One&display=swap" rel="stylesheet"> 
 
     <title>Method Designing</title>
@@ -182,9 +182,7 @@ href="faviconeye.png">
 
             <div class="row">
               <div class="bodycolumn">
-                <p class="text" style="color:rgb(255, 255, 255); letter-spacing: -1px; margin: 11px;
-                ;margin-left: 30px;"
-                >The author Jessica Helfand, starts the passage by expressing to her readers 
+                <p>The author Jessica Helfand, starts the passage by expressing to her readers 
                   about how a newly engaged form of any critical practice is necessary if it does
                    not include exploring one’s originality. She speaks about how autonomy in graphic 
                    design is vital to sustain a designer’s true identity.
