Added more CSS styling and colors

--- a/page2.html
+++ b/page2.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Familjen+Grotesk:wght@400&display=swap"
-    =Playfair+Display:wght@300&family=Source+Code+Pro:wght@100&display=swap" 
+    =Playfair+Display:wght@300&family=Source+Code+Pro=swap" 
     Yeseva+One&display=swap" rel="stylesheet"> 
 
     <title>Method Designing</title>
@@ -111,8 +111,7 @@ href="faviconeye.png">
           -webkit-text-stroke-color: rgb(218, 218, 218);
           text-align: center;">Method Designing</h1> 
         
-        <h2 style="font-size:2vw; font-family: 'Source Code Pro', monospace; margin-top: -8%; color: #ffffff;
-          text-align: center;">Jessica Helfand&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;May 2005</h2> 
+        <h2>Jessica Helfand&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;May 2005</h2> 
 
       <style>
         * {
@@ -186,6 +185,7 @@ href="faviconeye.png">
                   about how a newly engaged form of any critical practice is necessary if it does
                    not include exploring one’s originality. She speaks about how autonomy in graphic 
                    design is vital to sustain a designer’s true identity.
+                   <br> <br> 
 <br>
                   In the genesis of this article, Konstantin Stanislavski, a theatre practitioner, 
                   compares modern theatre by introducing a new system of training in which the actor
