Added Konstantin image

--- a/page2.html
+++ b/page2.html
@@ -212,6 +212,12 @@ href="faviconeye.png">
                   
 <br> <br> <br> <br> <br> <br><br> <br> 
 
+<div class="konstantin" >
+  <img src="Konstantin.jpg" alt="Konstantin" width="100%"
+  
+</div>
+</div>
+
             
 
     </body>
