Adjusted Konstantin image

--- a/page2.html
+++ b/page2.html
@@ -108,7 +108,8 @@ href="faviconeye.png">
           <h1><span id="content1" >Method</span>
             <span id="content2">Designing.</span></h1> 
         
-        <h2>Jessica Helfand &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;May 2005</h2> 
+        <h2>Jessica Helfand &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;May 2005</h2> 
 
       <style>
         * {
@@ -210,7 +211,7 @@ href="faviconeye.png">
                     <p>Some text..</p>
                   </div> -->
                   
-<br> <br> <br> <br> <br> <br><br> <br> 
+<br>
 
 <div class="konstantin" >
   <img src="Konstantin.jpg" alt="Konstantin" width="100%"
