Trying image hover effects

--- a/page2.html
+++ b/page2.html
@@ -213,12 +213,21 @@ href="faviconeye.png">
                   
 <br>
 
-<div class="konstantin" >
+ <!--<div class="konstantin" >
   <img src="Konstantin.jpg" alt="Konstantin" width="100%"
-  
-</div>
+</div> -->
+
+<div class="container">
+  <div class="image">
+    <img src="Konstantin.jpg" class="img" width="700" alt="">
+  </div>
 </div>
 
+<div class="item">
+  <div class="polaroid">
+    <img src="https://i.imgur.com/5YVg9Ru.jpg" />
+  </div>
+</div>
             
 
     </body>
