Added class row

--- a/page2.html
+++ b/page2.html
@@ -176,8 +176,6 @@ href="faviconeye.png">
              
             </div>
 
-
-            <div class="row">
               <div class="bodycolumn">
                 <p>The author Jessica Helfand, starts the passage by expressing to her readers 
                   about how a newly engaged form of any critical practice is necessary if it does
@@ -216,18 +214,22 @@ href="faviconeye.png">
  <!--<div class="konstantin" >
   <img src="Konstantin.jpg" alt="Konstantin" width="100%"
 </div> -->
-
-<div class="container">
-  <div class="image">
-    <img src="Konstantin.jpg" class="img" width="700" alt="">
-  </div>
-</div>
-
-<div class="item">
-  <div class="polaroid">
-    <img src="https://i.imgur.com/5YVg9Ru.jpg" />
-  </div>
-</div>
-            
-
+  
+<div class="row">
+  <p>The author Jessica Helfand, starts the passage by expressing to her readers 
+    about how a newly engaged form of any critical practice is necessary if it does
+     not include exploring one’s originality. She speaks about how autonomy in graphic 
+     design is vital to sustain a designer’s true identity.
+     <br> <br> 
+<br>
+    In the genesis of this article, Konstantin Stanislavski, a theatre practitioner, 
+    compares modern theatre by introducing a new system of training in which the actor
+     would draw on his or her own emotions to truly understand their original character.
+      He states “We protested against the old manner of acting and against theatricality,
+       against artificial pathos and declamation,” in order to bring about a revolution 
+       in the field of acting. In contrast to the loud, overdramatic fashion, a character
+        once understood could be portrayed much more subtly encompassing all his/her 
+        traits. This pedagogical system developed by Konstantin was titled ‘method 
+        training’ which was laster used to train designers.</p> 
+      </div>
     </body>
