Added new footer image & block quotes with buttons

--- a/page2.html
+++ b/page2.html
@@ -233,11 +233,36 @@ href="faviconeye.png">
   </blockquote>
 </div>
 
-<div>
-  <blockquote>
-  <div class="block-text"></div>
-  Schools of thought are always hotbeds of ideological controversy.
-  </blockquote>
+
+<p2 style="background-color: #ffffff; padding-left: 45px; font-size: 35px;color: rgb(124, 124, 124);
+font-family:'Source Code Pro', monospace ; padding-right: 5%; padding-top: 5px; float:right ">
+  - Konstantin Stanislavski</p2>
+
+  <p2 style="background-color: #ffffff; padding-left: 95px; font-size: xxx-large;color: blue;
+  font-family:'Familjen Grotesk' ; padding-right: 20%; ">
+    "Schools of thought</p2>
+
+    <br>
+
+    <p2 style="background-color: #ffffff; padding-left: 95px; font-size: xxx-large; color: blue;
+  font-family:'Familjen Grotesk' ; padding-right: 20%; ">
+    are always hotbeds </p2>
+
+    <br>
+
+    <p2 style="background-color: #ffffff; padding-left: 95px; font-size: xxx-large;color: blue;
+  font-family:'Familjen Grotesk' ; padding-right: 20%;  padding-bottom: 500px;">
+    of ideological controversy.</p2>
+
+    <br>  <br> <br> 
+
+    <div>
+      <a href="#" class="button">Button</a>
+    </div>
+
+  </div>
+  <footer class="footer"> <img src="footergrid.jpg" alt="footer" style="width:100%">
+  </footer>
 </div>
 
     </body>
