Made it responsive

--- a/page2.html
+++ b/page2.html
@@ -182,9 +182,9 @@ href="faviconeye.png">
                    <br> <br> 
 <br>
                   In the genesis of this article, Konstantin Stanislavski, a theatre practitioner, 
-                  compares modern theatre by introducing a new system of training in which the actor
+                  compares modern theatre by introducing  <mark>a new system of training</mark> in which the actor
                    would draw on his or her own emotions to truly understand their original character.
-                    He states “We protested against the old manner of acting and against theatricality,
+                    He states We protested against the old manner of acting and against theatricality,
                      against artificial pathos and declamation,” in order to bring about a revolution 
                      in the field of acting. In contrast to the loud, overdramatic fashion, a character
                       once understood could be portrayed much more subtly encompassing all his/her 
@@ -220,7 +220,7 @@ href="faviconeye.png">
    but it may not prove to be a breeding ground for innovation. She mentions that she herself was an 
    actress before she pursued graphic design, and struggled with implementing the ‘method design’ model
     into her work. Delving more into the emotional psychology aspect, Jessica expatiates about the 
-    necessity of ‘emotional honesty’ in design. Emotional honesty helps your audience resonate with 
+    necessity of <mark>‘emotional honesty’</mark> in design. Emotional honesty helps your audience resonate with 
     your work or performance because spectators are always looking for a one-on-one connection with 
     art. This method used in graphic design backfires paradoxically because the author states that 
     students fail to establish their own identity in the mere process of trying to create work that
@@ -229,30 +229,25 @@ href="faviconeye.png">
        erroneously treats sentiment as substance, and why?” stands out as it reflects how art cannot
         be weighed and calculated rather it should be felt and fathomed with all five human senses. 
         This reading served as a stimulus to keep asking difficult questions, solving harder problems,
-         inventing better worlds, being true to ourselves as creators and not imposters.
+         inventing better worlds, being true to ourselves as <mark>creators and not imposters.</mark>
   </blockquote>
 </div>
 
+  <p3 class="para2">
+    "Schools of thought</p3>
 
-<p2 style="background-color: #ffffff; padding-left: 45px; font-size: 35px;color: rgb(124, 124, 124);
-font-family:'Source Code Pro', monospace ; padding-right: 5%; padding-top: 5px; float:right ">
+    <br>
+
+    <p4 class="para3">
+    are always hotbeds </p4>
+
+    <br>
+
+    <p5 class="para4">
+    of ideological controversy.</p5>
+
+   <p2 class="para1">
   - Konstantin Stanislavski</p2>
-
-  <p2 style="background-color: #ffffff; padding-left: 95px; font-size: xxx-large;color: blue;
-  font-family:'Familjen Grotesk' ; padding-right: 20%; ">
-    "Schools of thought</p2>
-
-    <br>
-
-    <p2 style="background-color: #ffffff; padding-left: 95px; font-size: xxx-large; color: blue;
-  font-family:'Familjen Grotesk' ; padding-right: 20%; ">
-    are always hotbeds </p2>
-
-    <br>
-
-    <p2 style="background-color: #ffffff; padding-left: 95px; font-size: xxx-large;color: blue;
-  font-family:'Familjen Grotesk' ; padding-right: 20%;  padding-bottom: 500px;">
-    of ideological controversy.</p2>
 
     <br>  <br> <br> 
 
