Made responsive for 375vw

--- a/page2.html
+++ b/page2.html
@@ -233,20 +233,10 @@ href="faviconeye.png">
   </blockquote>
 </div>
 
-  <p3 class="para2">
-    "Schools of thought</p3>
-
-    <br>
-
-    <p4 class="para3">
-    are always hotbeds </p4>
-
-    <br>
-
-    <p5 class="para4">
-    of ideological controversy.</p5>
-
-   <p2 class="para1">
+  <p3 class="para1">
+    "Schools of thought <br> are always hotbeds of <br> ideological controversy.</p3>
+    
+   <p2 class="para2">
   - Konstantin Stanislavski</p2>
 
     <br>  <br> <br> 
