Reduced h1 bottom margin & bg color

--- a/page2.html
+++ b/page2.html
@@ -115,7 +115,7 @@ href="faviconeye.png">
         }
         
         .row:after {
-          content: "";
+          content: ""; padding-top: 5em;
           display: table;
           clear: both;
         }
@@ -143,7 +143,8 @@ href="faviconeye.png">
                   </div>
                 </aside>
                 </div>
-
+                
+                <br> 
 <div>
   <blockquote>
   <div class="blockquote">
