Made paragraph responsive for mobile

--- a/page2.html
+++ b/page2.html
@@ -30,7 +30,8 @@ href="faviconeye.png">
           float: left;
           color: #ffffff;
           text-align: center;
-          padding: 20px 20px;
+          padding-right: 25px; padding-top: 20px;
+          padding-left: 25px;
         }
         
         .sticky {
