--- a/index.html
+++ b/index.html
@@ -21,9 +21,8 @@ Yeseva+One&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
-      font-size: 10px; font-family: 'Source Code Pro'; height: 100vh;
-      font-weight: 600;
-      monospace; font-size: 12px; line-height: 1.6;
+      font-size: 10px; font-family: 'Source Code Pro', monospace ; height: 100vh;
+      font-weight: 600; font-size: 12px; line-height: 1.6;
     }
   
     #navbar a {
