Uploaded content for other pages

--- a/page2.html
+++ b/page2.html
@@ -188,7 +188,7 @@ href="faviconeye.png">
 </div>
 
   <p3 class="para1">
-    "Schools of thought <br> are always hotbeds of <br> ideological controversy.</p3>
+    "Schools of thought <br> are always hotbeds of <br> ideological controversy."</p3>
     
    <p2 class="para2">
   - Konstantin Stanislavski</p2>
