--- a/page3.html
+++ b/page3.html
@@ -13,6 +13,12 @@
     =Playfair+Display:wght@300&family=Source+Code+Pro=swap" 
     Yeseva+One&display=swap" rel="stylesheet"> 
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Italiana&family
+    =Playfair+Display:wght@600&family=Source+Code+Pro:wght@400&family=
+    Yeseva+One&display=swap" rel="stylesheet">
+
     <title >Design Thinking</title>
    
 </head>
