--- a/page2.html
+++ b/page2.html
@@ -12,6 +12,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Familjen+Grotesk:wght@400&display=swap"
     =Playfair+Display:wght@300&family=Source+Code+Pro=swap" 
     Yeseva+One&display=swap" rel="stylesheet"> 
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Italiana&family
+=Playfair+Display:wght@600&family=Source+Code+Pro:wght@400&family=
+Yeseva+One&display=swap" rel="stylesheet">
 
     <title >Method Designing</title>
    
