--- a/page3.html
+++ b/page3.html
@@ -155,7 +155,7 @@ href="faviconeye.png">
 <div>
   <blockquote>
   <div class="blockquote">
-    <mark>Dersign is a talismanic word</mark>  with nearly infinite meanings. Design is fashion design and urban design and graphic design and product design; it’s also assay design (biology) and object-oriented design (computer science) and intelligent design (creationism) and designer drugs and designer dykes and “I think he has designs on you.” Some of these uses seem to have little in common. And yet design’s English-language lives do orbit around certain ideas: intention, planning, aesthetics, method, vocation. These ideas together form a social system that generates meaning, defining the boundaries of knowledge and the locations of cultural and economic value. Design and the ideas that travel with it, in other words, make up a discourse. Design means something even broader now.
+    <mark>Design is a talismanic word</mark>  with nearly infinite meanings. Design is fashion design and urban design and graphic design and product design; it’s also assay design (biology) and object-oriented design (computer science) and intelligent design (creationism) and designer drugs and designer dykes and “I think he has designs on you.” Some of these uses seem to have little in common. And yet design’s English-language lives do orbit around certain ideas: intention, planning, aesthetics, method, vocation. These ideas together form a social system that generates meaning, defining the boundaries of knowledge and the locations of cultural and economic value. Design and the ideas that travel with it, in other words, make up a discourse. Design means something even broader now.
 
                    <br> 
 <br>
