--- a/page5.html
+++ b/page5.html
@@ -19,7 +19,7 @@
     =Playfair+Display:wght@600&family=Source+Code+Pro:wght@400&family=
     Yeseva+One&display=swap" rel="stylesheet">
 
-    <title >About the Project</title>
+    <title >Journeying Through Design</title>
    
 </head>
 
