Added new image to media query

--- a/index.html
+++ b/index.html
@@ -107,6 +107,9 @@ href="faviconeye.png">
     <img src="indexface.png" class="face"
     alt="face"></a>
 
+    <img src="mobileface.png" class="mobileface"
+    alt="mobileface"></a>
+
   <style>
     * {
       box-sizing: border-box;
