Added image to About the project page

--- a/page3.html
+++ b/page3.html
@@ -97,7 +97,7 @@ href="faviconeye.png">
 
           <h1>On&nbsp;Design&nbsp;Thinking</h1>
         
-        <h2>Maggie Gram&nbsp;&nbsp; &nbsp;&nbsp; Fall 2019</h2> 
+        <h2><em>Maggie Gram&nbsp;&nbsp; &nbsp;&nbsp; Fall 2019</em></h2> 
         
       <style>
         * {
@@ -177,7 +177,7 @@ But design isnâ€™t magic. To address a wicked problem is to look for its rootsâ€
 </div>
 
   <p3 class="para3">
-    "Americans <br>love design most when we are afraid."</p3>
+    "Americans <br>love design most when we are <i>afraid</i>."</p3>
 
     <div>
       <a href="#" class="button"></a>
