--- a/page4.html
+++ b/page4.html
@@ -97,7 +97,7 @@ href="faviconeye.png">
 
           <h1>Hooked&nbsp;on&nbsp;a&nbsp;Feeling</h1>
         
-        <h2>Michael Rock&nbsp;&nbsp;&nbsp;&nbsp;2015</h2> 
+        <h2><em>Michael Rock&nbsp;&nbsp;&nbsp;&nbsp;2015</em></h2> 
         
       <style>
         * {
@@ -173,7 +173,7 @@ href="faviconeye.png">
 </div>
 </div>
   <p3 class="para4">
-    "The Empathy <br>Economy is Booming. <br>  Facts are Out,  <br> Feelings are In."</p3>
+    "The Empathy <br>Economy is <i>Booming</i>. <br>  Facts are <i>Out</i>,  <br> Feelings are <i>In.</i>"</p3>
 
     <div>
       <a href="#" class="button"></a>
