Added padding and break to text

--- a/page5.html
+++ b/page5.html
@@ -151,22 +151,10 @@ href="faviconeye.png">
                 </aside>
                 </div>
 <div>
-  <div style="width:100%; color: #c9c9c9; font-family: 'Source Code Pro'; font-size: 15px;
-  line-height: 1.5; padding-left: 30px; padding-right: 30px; padding-top: 30px;">
+  <div style="width:100%; color: #cdcdcd; font-family: 'Source Code Pro'; font-size: 15px;
+  line-height: 1.5; padding-left: 30px; padding-right: 30px; padding-top: 50px;">
   This is a creative website where key articles related to Design as a subject are compiled to enwreathe a quick read for viewers
   & gauge this versatile discipline briefly. 'Journeying Through Design' is part of the designer's academic endeavor whilst pursuing her Typography & Interaction
                   Design course at the Parsons School of Design, NYC. 
 </div>
-
-    <div>
-      <a href="#" class="button"></a>
-    </div>
-  </div>
-  <footer class="footer"> <img src="footergrid.jpg" alt="footer" style="width:100%">
-  </footer>
-</div>
-
-<div>
-  <a href="#" class="button"> <em>Back to Top</em></a>
-</div>
-    </body>
+ <br><br><br><br><br>
