renamed html pages

--- a/methoddesigning.html
+++ b/methoddesigning.html
@@ -73,7 +73,7 @@ href="faviconeye.png">
                 <li>Method Designing</li> 
                 <br> <br> <br> <br> 
               </a>
-              <a href="page3.html"> 
+              <a href="designthinking.html"> 
                 <li>On Design Thinking</li>
                 <br> <br> <br> <br>
               </a>
