--- a/page3.html
+++ b/page3.html
@@ -69,11 +69,11 @@ href="faviconeye.png">
             <span></span>
         
             <ul id="menu">
-              <a href="page2.html"> 
+              <a href="designthinking.html"> 
                 <li>Method Designing</li> 
                 <br> <br> <br> <br> 
               </a>
-              <a href="page3.html"> 
+              <a href="designthinking.html"> 
                 <li>On Design Thinking</li>
                 <br> <br> <br> <br>
               </a>
