--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@ href="faviconeye.png">
             <span></span>
         
             <ul id="menu">
-              <a href="page2.html"> 
+              <a href="methoddesigning.html"> 
                 <li>Method Designing</li> 
                 <br> <br> <br> <br> 
               </a>
-              <a href="page3.html"> 
+              <a href="designthinking.html"> 
                 <li>On Design Thinking</li>
                 <br> <br> <br> <br>
               </a>
