--- a/designthinking.html
+++ b/designthinking.html
@@ -69,7 +69,7 @@ href="faviconeye.png">
             <span></span>
         
             <ul id="menu">
-              <a href="designthinking.html"> 
+              <a href="methoddesigning.html"> 
                 <li>Method Designing</li> 
                 <br> <br> <br> <br> 
               </a>
