trying href links on face1,2&3 in index.html

--- a/index.html
+++ b/index.html
@@ -139,11 +139,20 @@ href="faviconeye.png">
       
       <body>
   
-    <img src="indexface.png" class="face"
+    <!--<img src="indexface.png" class="face"
     alt="face"></a>
 
     <img src="in.png" class="mobileface"
-    alt="mobileface"></a>
+    alt="mobileface"></a> -->
+
+    <a> <img src="face1.png" class="face1" href="page4.html"
+    alt="face1"></a> 
+
+    <a> <img src="face2.png" class="face2" href="page4.html"
+    alt="face2"></a>
+
+    <a> <img src="face3.png" class="face3" href="page4.html"
+    alt="face3"></a>
   
     </style>
     </head>
